<resources>
    <string name="app_name">Matimatiks</string>
    <string name="welcome2"> A personalized math preparation tool </string>
    <string name="welcome3"> for WAEC/NECO/GCE/UTME</string>
    <string name="welcome4">Exam takers</string>
    <string name="company_logo">company_logo</string>
    <string name="log_in">LOG IN/SIGN UP</string>

    <!-- Strings related to login -->

    <string name="next">Next</string>
    <string name="and">and</string>
    <string name="logoutlogo">logoutLogo</string>
    <string name="facebook_application_id" translatable="false">1133011576785739</string>
    <string name="fb_login_protocol_scheme">fb1133011576785739</string>
    <string name="twitter_consumer_key" translatable="false">ed876qFW3BbRT9lqjGuDUUQ1o</string>
    <string name="twitter_consumer_secret" translatable="false">ed876qFW3BbRT9lqjGuDUUQ1o</string>
    <string name="setting_things_up"> we are  setting things up for you....</string>

    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">Hey Friend this app is really nice. You can download it here</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>

    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="hang_on">Hang on!</string>
    <string name="icon">icon</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Help">Help</string>
    <string name="communicate">Communicate</string>
    <string name="progress_report">Progress Report</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->


    <!-- Database Calls Begin-->

    <!-- Database Calls End -->

    <!-- Example settings for Notifications -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="prev">Prev</string>
    <string name="welcome5">and Common Entrance</string>
    <string name="continue_button">Continue</string>
    <string name="waec_jamb">WAEC/JAMB</string>
    <string name="jr_waec">Jr.WAEC</string>
    <string name="common_entrance">Common Entrance</string>
    <string name="select_an_exam_category">Select an Exam Category Below</string>
    <string name="read_through_exam_question_and_answers">Sample Questions and Answers</string>
    <string name="solve_exam_questions">Solve Exam Questions</string>
    <string name="take_mock_exam">Take Mock Exam</string>
    <string name="please">Please </string>
    <string name="select_exam_mode">Select Exam Mode</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="option_e">E</string>
    <string name="view_answer">View Answer</string>
    <string name="arrow">arrow</string>
    <string name="logo">Logo</string>
    <string name="do_not_show_this_message_again">Do not show this message again</string>
    <string name="logging_out">Logging Out…</string>
    <string name="incomplete">Incomplete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable recommendations for lacking areas  </string>
    <string name="pref_description_social_recommendations">Recommendations in areas for improvement
        based on your assessments results
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <array name="array_dot_active">
        <item>@color/company_color</item>
        <item>@color/light_font</item>
    </array>
    <array name="array_dot_inactive">
        <item>@color/light_font</item>
        <item>@color/company_color</item>
    </array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Turn off Recommender notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Answer Tone</string>
    <string name="image">Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waec_gce_exam">WAEC/GCE EXAM</string>
    <string name="select_exam_below">Select Exam Below</string>
    <string name="waec_gce">WAEC/GCE</string>
    <string name="jamb">JAMB</string>
    <string name="exam">exam</string>
    <string name="see_results">See Results</string>
    <string name="backbutton">BackButton</string>
    <string name="grade_image">grade_image</string>
    <string name="no_record_of_exam_attempted">NO RECORD OF EXAM ATTEMPTED</string>
    <string name="clear_history">Clear History</string>
    <string name="back_prog">back prog</string>
    <string name="answer">Answers</string>
    <string name="analysis">Analysis</string>
    <string name="report_details">Report Details</string>
    <string name="graph_explanation">Graph Explanation</string>
</resources>
