<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/QandA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/li"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@color/light_font"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@color/light_font"
            android:textSize="20sp"
            android:typeface="sans" />

    </LinearLayout>

    <matimatiks.matimatiks.TouchImageView
        android:id="@+id/quest"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/li"
        android:layout_gravity="center"
        android:contentDescription="@string/and"
        android:scaleType="matrix" />


    <RadioGroup
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nxt"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/option_a" />

        <RadioButton
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/option_b" />

        <RadioButton
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/option_c" />

        <RadioButton
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/option_d" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/nxt"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:background="@color/black"
        android:contentDescription="@string/arrow"
        android:src="@mipmap/next"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/prev"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:background="@color/black"
        android:contentDescription="@string/arrow"
        android:src="@mipmap/prev"
        android:text="@string/prev"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <Button
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_toEndOf="@+id/prev"
        android:layout_toLeftOf="@+id/nxt"
        android:layout_toRightOf="@+id/prev"
        android:layout_toStartOf="@+id/nxt"
        android:background="@xml/cus_button_2"
        android:text="@string/view_answer"
        android:textColor="@color/white" />


</RelativeLayout>