<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/company_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">
    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/welcome2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/welcome3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/welcome5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/welcome4"/>
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/continue_button"
       android:id="@+id/im1"
       android:layout_gravity="bottom"
       android:textColor="@color/company_color"
       android:background="@xml/cus_button"
       android:layout_marginTop="90dp"
       />
    </LinearLayout>